<resources>
    <string name="app_name">GarageSaleFinder</string>
    <string name="user">user</string>
    <string name="password">password</string>
    <string name="title">title</string>
    <string name="location">location</string>
    <string name="description">description</string>
    <string name="time">time</string>
    <string name="priceRange">priceRange</string>
    <string name="image">image</string>
    <string name="first">first</string>
    <string name="last">last</string>
    <string name="quantity">Quantity</string>
</resources>