<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0FFF6"
    tools:context=".ViewItem">


    <TextView
        android:id="@+id/title"
        android:layout_width="415dp"
        android:layout_height="70dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:fontFamily="@font/roastedchicken1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="358dp"
        android:layout_height="263dp"
        android:layout_marginTop="100dp"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/description"
        android:layout_width="360dp"
        android:layout_height="126dp"
        android:layout_marginTop="370dp"
        android:text="@string/description"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:fontFamily="@font/bodoni"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/viewPriceRange"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:text="Price:"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:fontFamily="@font/bodoni"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".08"
        app:layout_constraintRight_toRightOf="@+id/viewQuantity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description" />

    <TextView
        android:id="@+id/viewQuantity"
        android:layout_width="111dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:text="Quantity:"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:fontFamily="@font/bodoni"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/viewPriceRange"
        app:layout_constraintTop_toBottomOf="@id/description" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="147dp"
        android:layout_height="48dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="652dp"
        android:layout_marginEnd="45dp"
        android:background="@color/wales"
        android:text="Back to Menu"
        android:fontFamily="@font/bodoni"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.483" />

    <Button
        android:id="@+id/back1Btn"
        android:layout_width="147dp"
        android:layout_height="48dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="8dp"
        android:background="@color/wales"
        android:text="Back to results"
        android:fontFamily="@font/bodoni"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/btnBack"
        app:layout_constraintTop_toBottomOf="@id/btnBack"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="48dp"
        android:text="@string/quantity"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:fontFamily="@font/bodoni"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/back1Btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/viewQuantity"
        app:layout_constraintTop_toBottomOf="@id/viewQuantity"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/priceRange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="284dp"
        android:text="@string/priceRange"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:fontFamily="@font/bodoni"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/back1Btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewPriceRange"
        app:layout_constraintVertical_bias="0.0" />
    <Button
        android:id="@+id/editItemBtn"
        android:layout_width="48dp"
        android:layout_height="40dp"
        android:layout_marginStart="356dp"
        android:layout_marginTop="16dp"
        android:background="@color/wales"
        android:onClick="EditItem"
        android:text="Edit"
        android:fontFamily="@font/bodoni"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/deleteItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Delete"
        android:fontFamily="@font/bodoni"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="667dp"
        tools:ignore="MissingConstraints"
        android:background="@color/wales"
        />


</androidx.constraintlayout.widget.ConstraintLayout>